tests/rosetta/out/Smalltalk/100-doors-2.out
/tmp/100-doors-2.st:6: parse error, expected ']'
