tests/rosetta/out/Smalltalk/100-doors-2.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| door incrementer current line |
door := 1.
incrementer := 0.
1 to: 101 do: [:current |.
line := (((('Door ') + ((current asString)))) + (' ')).
((current = door)) ifTrue: [
line := (line + 'Open').
incrementer := (incrementer + 1).
door := (((door + ((2 * incrementer)))) + 1).
] ifFalse: [
line := (line + 'Closed').
].
Transcript show: (line) printString; cr.
].
.
